src/test/ui/closures/2229_closure_analysis/migrations/insignificant_drop_attr_migrations.stderr
error: drop order will change in Rust 2021
  --> $DIR/insignificant_drop_attr_migrations.rs:37:13
   |
LL |       let c = || {
   |  _____________^
LL | |
LL | |
LL | |
LL | |         let _t = t.0;
LL | |     };
   | |_____^
   |
note: the lint level is defined here
  --> $DIR/insignificant_drop_attr_migrations.rs:3:9
   |
LL | #![deny(rust_2021_incompatible_closure_captures)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/disjoint-capture-in-closures.html>
help: add a dummy let to cause `t` to be fully captured
   |
LL |     let c = || { let _ = &t; 
LL |
LL |
LL |
LL |         let _t = t.0;
LL |     };
   |

error: drop order will change in Rust 2021
  --> $DIR/insignificant_drop_attr_migrations.rs:55:13
   |
LL |       let c = move || {
   |  _____________^
LL | |
LL | |
LL | |
LL | |         let _t = t.1;
LL | |     };
   | |_____^
   |
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/disjoint-capture-in-closures.html>
help: add a dummy let to cause `t` to be fully captured
   |
LL |     let c = move || { let _ = &t; 
LL |
LL |
LL |
LL |         let _t = t.1;
LL |     };
   |

error: aborting due to 2 previous errors

